# kicad-via-patterns

./: .gitignore  .justfile  LICENSE  README.md  dev-requirements.txt  index.html  packages.json  pyproject.toml  pytest.ini  repository.json
.circleci/: config.yml
release/: deploy.sh
source/: __init__.py  __main__.py  dialog.py  plugin_action.py
tests/: conftest.py  test_cli.py  test_plugin.py  test_via_patterns.py
tests/colors/: unittest.json
via_patterns/: __init__.py  __main__.py  dialog.py  plugin_action.py  via_patterns.py
